@@ -30,6 +30,7 @@
 
 #include <libgearman/visibility.h>
 #include <libgearman/constants.h>
+#include <libgearman/strerror.h>
 
 // Everything above this line must be in the order specified.
 #include <libgearman/core.h>
