@@ -32,6 +32,28 @@ typedef struct
   pid_t worker_pid;
 } client_test_st;
 
+/**
+  @note Just here until I fix libhashkit.
+*/
+static uint32_t internal_generate_hash(const char *key, size_t key_length)
+{
+  const char *ptr= key;
+  uint32_t value= 0;
+
+  while (key_length--)
+  {
+    uint32_t val= (uint32_t) *ptr++;
+    value += val;
+    value += (value << 10);
+    value ^= (value >> 6);
+  }
+  value += (value << 3);
+  value ^= (value >> 11);
+  value += (value << 15);
+
+  return value == 0 ? 1 : (uint32_t) value;
+}
+
 /* Prototypes */
 test_return_t init_test(void *object);
 test_return_t allocation_test(void *object);
@@ -467,6 +489,39 @@ static void log_counter(const char *line, gearman_verbose_t verbose,
   *counter= *counter + 1;
 }
 
+static test_return_t strerror_count(void *object  __attribute__((unused)))
+{
+  test_truth(GEARMAN_MAX_RETURN == 47);
+
+  return TEST_SUCCESS;
+}
+
+static test_return_t strerror_strings(void *object  __attribute__((unused)))
+{
+  gearman_return_t rc;
+  uint32_t values[] = { 324335284U, 1940666259U, 4156775927U, 18028287U,
+                        1834995715U, 1009419836U, 1038124396U, 3050095617U,
+                        4004269877U, 2913489720U, 1389266665U, 1374361090U,
+                        3775104989U, 1158738795U, 2490507301U, 426780991U,
+                        2421852085U, 426121997U, 3669711613U, 1027733609U,
+                        48094985U, 4052600452U, 2697110207U, 4260329382U,
+                        3706494438U, 1765339649U, 1176029865U, 2899482444U,
+                        2255507756U, 1844534215U, 1685626311U, 3134591697U,
+                        1469920452U, 1693700353U, 1173962212U, 2491943732U,
+                        1864825729U, 523632457U, 1342225548U, 245155833U,
+                        3999913926U, 2789053153U, 2576033598U, 463490826U,
+                        1983660343U, 2268979717U, 1656388188U };
+
+  for (rc= GEARMAN_SUCCESS; rc < GEARMAN_MAX_RETURN; rc++)
+  {
+    uint32_t hash_val;
+    const char *msg=  gearman_strerror(rc);
+    hash_val= internal_generate_hash(msg, strlen(msg));
+    test_truth(values[rc] == hash_val);
+  }
+  return GEARMAN_SUCCESS;
+}
+
 static uint32_t global_counter;
 
 static test_return_t pre_logging(void *object)
@@ -603,10 +658,17 @@ test_st tests_log[] ={
   {0, 0, 0}
 };
 
+test_st gearman_strerror_tests[] ={
+  {"count", 0, strerror_count },
+  {"strings", 0, strerror_strings },
+  {0, 0, 0}
+};
+
 
 collection_st collection[] ={
-  {"client", 0, 0, tests},
+  {"gearman_client_st", 0, 0, tests},
   {"client-logging", pre_logging, post_logging, tests_log},
+  {"gearman_strerror", 0, 0, gearman_strerror_tests},
   {0, 0, 0, 0}
 };
 
